# mars-ising-sampler

./: README.md  pyproject.toml  requirements.txt
checkpoints/: conv_global_critical.pt  conv_local_critical.pt
ising/: __init__.py  configs.py  ctmc.py  evaluate.py  metrics.py  models.py  reference.py  target.py  train.py
results/: conv_global_observables.npz  conv_local_observables.npz  letf_observables.npz  summary_metrics.json  wolff_reference.npz
